--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -20,6 +20,7 @@
 /snare.jpg
 /snarenoise.wav
 /snaresound.wav
-/274095__orlando65__village-noises.wav
-/soundeffect.wav
 /soundeffect1.wav
+/soundeffect2.wav
+/soundeffect3.wav
+/soundeffect.wav
